fix upstream tdlib version extraction logic
Signed-off-by: xeptore <29199390+xeptore@users.noreply.github.com>

--- a/.github/workflows/latest.yml
+++ b/.github/workflows/latest.yml
@@ -48,7 +48,7 @@ jobs:
         id: version
         run: |
           telegram_bot_api_version=$(git rev-parse --short HEAD)
-          tdlib_version=$(git rev-parse --short HEAD)
+          tdlib_version=$(cd td &&git rev-parse --short HEAD)
           version=$telegram_bot_api_version-$tdlib_version
           echo "version=$version" >> $GITHUB_OUTPUT
       - name: Docker Meta
