--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -23,14 +23,47 @@ permissions:
   security-events: none
   statuses: none
 jobs:
+  version:
+    name: Get Version
+    outputs:
+      version: ${{ steps.version.outputs.version }}
+    steps:
+      - name: Checkout Upstream Repo
+        uses: actions/checkout@v4
+        with:
+          repository: tdlib/telegram-bot-api
+          path: upstream
+          submodules: recursive
+          fetch-depth: 0
+      - name: Install Dependencies
+        run: |
+          apt-get update
+          apt-get upgrade -y
+          apt-get install -y make git zlib1g-dev libssl-dev gperf cmake g++
+      - name: Inject Version CMake Command
+        working-directory: telegram-bot-api
+        run: |
+          echo 'file(WRITE version.txt "${PROJECT_VERSION}")' >> CMakeLists.txt
+          cat CMakeLists.txt
+      - name: Run CMake
+        working-directory: telegram-bot-api/build
+        id: version
+        run: |
+          tmp_dir=$(mktemp -d)
+          cmake -B "$tmp_dir" -S .. ..
+          version="$(cat ../version.txt)"
+          echo "version=${version}" >> $GITHUB_OUTPUT
+      - name: Debug
+        run: |
+          echo "version=${{ steps.version.outputs.version }}"
   build-image:
     name: Build Docker Image
     runs-on: ubuntu-24.04
+    needs:
+      - version
     permissions:
       packages: write
       contents: read
-    outputs:
-      version: ${{ steps.version.outputs.version }}
     steps:
       - name: Checkout This Repo
         uses: actions/checkout@v4
@@ -47,10 +80,8 @@ jobs:
         working-directory: upstream
         id: version
         run: |
-          telegram_bot_api_version="$(git rev-parse --short HEAD)"
-          tdlib_version="$(cd td && git rev-parse --short HEAD)"
-          version="${telegram_bot_api_version}-${tdlib_version}"
-          echo "version=${version}" >> $GITHUB_OUTPUT
+          telegram_bot_api_rev="$(git rev-parse --short HEAD)"
+          echo "telegram_bot_api_rev=${telegram_bot_api_rev}" >> $GITHUB_OUTPUT
       - name: Docker Meta
         id: meta
         uses: docker/metadata-action@v5
@@ -59,7 +90,8 @@ jobs:
             ghcr.io/${{ github.repository }}
           tags: |
             type=edge,branch=${{ github.event.repository.default_branch }}
-            type=raw,value=${{ steps.version.outputs.version }}
+            type=raw,value=${{ steps.version.outputs.telegram_bot_api_rev }}
+            type=raw,value=${{ needs.version.outputs.version }}
           labels: |
             maintainer=${{ github.repository_owner }}
             org.opencontainers.image.authors=${{ github.repository_owner }}
