--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -41,12 +41,11 @@ jobs:
           sudo apt-get upgrade -y
           sudo apt-get install -y make git zlib1g-dev libssl-dev gperf cmake g++
       - name: Inject Version CMake Command
-        working-directory: telegram-bot-api
         run: |
           echo 'file(WRITE version.txt "${PROJECT_VERSION}")' >> CMakeLists.txt
           cat CMakeLists.txt
       - name: Run CMake
-        working-directory: telegram-bot-api/build
+        working-directory: build
         id: version
         run: |
           tmp_dir=$(mktemp -d)
