ci: fix version job path error
Signed-off-by: xeptore <29199390+xeptore@users.noreply.github.com>

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -26,6 +26,8 @@ jobs:
   version:
     name: Get Version
     runs-on: ubuntu-24.04
+    container:
+      image: docker.io/library/ubuntu:25.10
     outputs:
       version: ${{ steps.version.outputs.version }}
     steps:
@@ -37,20 +39,19 @@ jobs:
           fetch-depth: 0
       - name: Install Dependencies
         run: |
-          sudo apt-get update
-          sudo apt-get upgrade -y
-          sudo apt-get install -y make git zlib1g-dev libssl-dev gperf cmake g++
+          apt-get update
+          apt-get upgrade -y
+          apt-get install -y make git zlib1g-dev libssl-dev gperf cmake g++
       - name: Inject Version CMake Command
         run: |
           echo 'file(WRITE version.txt "${PROJECT_VERSION}")' >> CMakeLists.txt
           cat CMakeLists.txt
       - name: Run CMake
-        working-directory: build
         id: version
         run: |
           tmp_dir=$(mktemp -d)
-          cmake -B "$tmp_dir" -S .. ..
-          version="$(cat ../version.txt)"
+          cmake -B "$tmp_dir" -S . .
+          version="$(cat ./version.txt)"
           echo "version=${version}" >> $GITHUB_OUTPUT
       - name: Debug
         run: |
